2007-10-10 Marc Noirot <marc.noirot@gmail.com>
	* types.h, types.c: Transformed most conversion functions
	  into macros, to improve execution speed.

2007-10-07 Marc Noirot <marc.noirot@gmail.com>
	* amf.c (amf_data_decode, amf_data_encode):
	  Fixed missing break statements.
	
	* amf.c (amf_string_encode): Forgot to count
	  the string length prefix size.
	
	* flvmeta.c, mmap.h, mmap.c: Use memory mapping instead
	  of traditional buffered I/O. This should improve speed,
	  at the cost of a bigger memory usage.
	
	* Makefile.am, flvmeta.vcproj: Added mmap.c and mmap.h.
	
	* flvmeta.c (write_flv): Added tag body length sanity
	  check. An incorrect body length could trigger a memory
	  overflow, or a denial-of-service attack.

2007-09-30 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac, config.h.win, types.h, types.c:
	  Fixed integer and float size checking, as well as endianness
	  checking. This fixes issues on 64-bits architectures.
	
	* flvdump.c (main): Fixed printf type specifiers.
	
	* flvmeta.c (get_flv_info): Fixed "times" metadata tag,
	  which was incorrectly written as "timestamps".
	
	* flvmeta.c (compute_metadata): Fixed audio delay
	  computation.
	
2007-09-24 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (compute_metadata, get_flv_info):
	  Fixed an offset and file size computation error.
	
	* flvmeta.c (compute_metadata): Audio-related metadata
	  should not appear when the file has no audio data.
	
	* Makefile.win: Removed references to flv.c.

2007-09-22 Marc Noirot <marc.noirot@gmail.com>
	* types.c, types.h: Removed 64 bits integers conversions.
	
	* types.c (uint32_to_uint24_be): Fixed a few literal unsigned
	  integers.

2007-09-21 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0 Release.
	
	* amf.c (amf_data_free): Fixed a memory leak on array objects.
	
	* config.h.win, configure.ac, flvdump.c, flvmeta.c:
	  Added bug report mail address.
	
	* configure.ac: Added a number of language and headers tests.