@@ -1,3 +1,7 @@
+2007-10-11 Marc Noirot <marc.noirot@gmail.com>
+	* flvmeta.c (inject_metadata, write_flv): Do not use
+	  memory mapping to write the output file.
+
 2007-10-10 Marc Noirot <marc.noirot@gmail.com>
 	* types.h, types.c: Transformed most conversion functions
 	  into macros, to improve execution speed.
